<?xml version="1.0"?>
<package format="2">
  <name>ros_dwm1001</name>
  <version>0.0.0</version>
  <description>A ROS package.</description>

  <maintainer email="joeyyang.ai@gmail.com">Joey Yang</maintainer>
  <author email="joeyyang.ai@gmail.com">Joey Yang</author>

  <license>BSD</license>
  
  <url type="repository">https://github.com/joeyjyyang/ros_dwm1001</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
 
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
</package>
